# ha-vacation-mode

./: .env.example  .gitignore  CLAUDE.md  README.md  config.json.example  configure.py  features.py  fetch_ha_data.py  generate.py  generate_model.sh  generate_resample.py  light_activity.py  lights.ipynb  monitor.py  pyproject.toml  run.sh  start_vacation_daemon.sh  stop_vacation_daemon.sh  vacation_daemon.py
